[package]
name = "memflow-lime"
version = "0.1.0"
authors = ["Marco Cavenati <cavenatimarco+memflowlime@gmail.com>"]
edition = "2021"
description = "LiME files connector for memflow physical memory introspection framework"
keywords = ["memflow", "LiME", "memory", "linux"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Marcondiro/memflow-LiME"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = "0.2.0"
binread = "2.2.0"

[features]
plugins = ['memflow/plugins']
